gccida/c3/check_fold_consts
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_fold_consts/src/simplify-rtx.c:2517:1: error: must use 'union' tag to refer to type 'real_extract'
real_extract u; // [rsp+48h] [rbp-58h] 
^
union 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_fold_consts/src/simplify-rtx.c:2523:12: error: expected expression
*( _OWORD *)&u.i[1] = *( _OWORD *)( *( _QWORD *)data + 24LL); 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_fold_consts/src/simplify-rtx.c:2523:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&u.i[1] = *( _OWORD *)( *( _QWORD *)data + 24LL); 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_fold_consts/src/simplify-rtx.c:2523:34: error: expected expression
*( _OWORD *)&u.i[1] = *( _OWORD *)( *( _QWORD *)data + 24LL); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_fold_consts/src/simplify-rtx.c:2523:26: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&u.i[1] = *( _OWORD *)( *( _QWORD *)data + 24LL); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_fold_consts/src/simplify-rtx.c:2526:12: error: expected expression
*( _OWORD *)d1.r = *( _OWORD *)( v1 + 16); 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_fold_consts/src/simplify-rtx.c:2526:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)d1.r = *( _OWORD *)( v1 + 16); 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_fold_consts/src/simplify-rtx.c:2528:12: error: expected expression
*( _OWORD *)x.r = *( _OWORD *)u.d.r; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_fold_consts/src/simplify-rtx.c:2528:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)x.r = *( _OWORD *)u.d.r; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_fold_consts/src/simplify-rtx.c:2532:12: error: expected expression
*( _OWORD *)xa.r = *( _OWORD *)u.d.r; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_fold_consts/src/simplify-rtx.c:2532:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)xa.r = *( _OWORD *)u.d.r; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_fold_consts/src/simplify-rtx.c:2535:12: error: expected expression
*( _OWORD *)xb.r = *( _OWORD *)u.d.r; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_fold_consts/src/simplify-rtx.c:2535:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)xb.r = *( _OWORD *)u.d.r; 
   ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_fold_consts/src/simplify-rtx.c:2538:12: error: expected expression
*( _OWORD *)y.r = *( _OWORD *)u.d.r; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_fold_consts/src/simplify-rtx.c:2538:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)y.r = *( _OWORD *)u.d.r; 
   ^
15 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/check_fold_consts/src/obj/simplify-rtx.o] Error 1
